Closed
Bug 473529
Opened 16 years ago
Closed 16 years ago
Archives folder doesn't use localized name in L10n builds
Categories
(Thunderbird :: Mail Window Front End, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 3.0b2
People
(Reporter: wladow, Assigned: standard8)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
|
2.97 KB,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
Mozilla/5.0 (Windows; U; Windows NT 6.0; sk; rv:1.9.1b3pre) Gecko/20090113 Shredder/3.0b2pre
Archives folder is created with default en-US name in L10n builds. Tested with several locales. Should use localized name instead.
Comment 1•16 years ago
|
||
It remains not localized after app restart?
| Assignee | ||
Comment 2•16 years ago
|
||
Did you checked that those localisations have had time to include the appropriate string?
AFAICT this is done in exactly the same way as the other special folders.
| Reporter | ||
Comment 3•16 years ago
|
||
(In reply to comment #1)
> It remains not localized after app restart?
yes
(In reply to comment #2)
> Did you checked that those localisations have had time to include the
> appropriate string?
of course, sk and cs are good candidates for testing here, both with archivesFolderName included
> AFAICT this is done in exactly the same way as the other special folders.
...and those are labeled correctly with localized strings
After a little investigation, it seems it does not work for POP3 accounts. I've tried it with my Gmail account - folder name was correctly localized when I used IMAP, but stayed in English when I used POP3 account.
And I don't see any related entry in Error Console.
The new Archives folder isn't also localized in my german Mac build of Thunderbird. It's named "Archives" instead of "Archiv" (or whatever the localizer desides for it).
Is it possible to rename this folder with an entry into the user.js?
| Assignee | ||
Comment 5•16 years ago
|
||
(In reply to comment #4)
> Is it possible to rename this folder with an entry into the user.js?
Unlikely. The proper fix would be to fix this bug. Putting on the blocking radar - new feature so I think it should be localized correctly.
I have some ideas about how we may be able to fix this.
Assignee: nobody → bugzilla
Flags: blocking-thunderbird3+
Target Milestone: --- → Thunderbird 3.0b2
| Assignee | ||
Comment 6•16 years ago
|
||
Sprinkle some more Archive flag checks around the system - basically the local (i.e. pop, local folders) archive folders weren't being treated as special folders and weren't having the flags set at the right times, hence not picking up the special folder names.
Attachment #358172 -
Flags: superreview?(bienvenu)
Attachment #358172 -
Flags: review?(bienvenu)
| Assignee | ||
Updated•16 years ago
|
Whiteboard: [needs review bienvenu]
Updated•16 years ago
|
Attachment #358172 -
Flags: superreview?(bienvenu)
Attachment #358172 -
Flags: superreview+
Attachment #358172 -
Flags: review?(bienvenu)
Attachment #358172 -
Flags: review+
Updated•16 years ago
|
Whiteboard: [needs review bienvenu]
| Assignee | ||
Comment 7•16 years ago
|
||
Patch checked in: http://hg.mozilla.org/comm-central/rev/b3045b2abbb0
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 8•16 years ago
|
||
Mozilla/5.0 (Windows; U; Windows NT 6.0; sk; rv:1.9.1b3pre) Gecko/20090125 Shredder/3.0b2pre
Partially works now: the folder is still created with en-US label, but gets a proper localized label after the app is restarted. Reopening, pls close it if this is expected behaviour, but I think it shouldn't be.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment 9•16 years ago
|
||
that is the expected behavior, though not the desired behavior. I believe there's a bug open for this problem in general with special folders we create. If so, this should be re-closed.
| Reporter | ||
Comment 10•16 years ago
|
||
Ah, right, bug 467527. Re-closing.
Status: REOPENED → RESOLVED
Closed: 16 years ago → 16 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•