Bug 473529 Archives folder doesn't use localized name in L10n builds. r/sr=bienvenu